[gd_scene load_steps=10 format=2]

[ext_resource path="res://MeshAnalyzer/Scripts/MeshAnalyzer.gd" type="Script" id=1]
[ext_resource path="res://MeshAnalyzer/Models/ArenaCollisionPaint.obj" type="ArrayMesh" id=2]
[ext_resource path="res://MeshAnalyzer/Shaders/Sample3DPosToTexture.gdshader" type="Shader" id=3]
[ext_resource path="res://MeshAnalyzer/Shaders/ExpandIslands.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )

[sub_resource type="Environment" id=1]
background_mode = 4

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("SampleViewport")

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("ExpandIslandViewPort")

[node name="MeshAnalyzer" type="Spatial"]
transform = Transform( 1.001, 0, 0, 0, 1.001, 0, 0, 0, 1.001, 0, 0, 0 )
script = ExtResource( 1 )
textureSize = Vector2( 512, 512 )

[node name="SampleViewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )

[node name="SampleMesh" type="MeshInstance" parent="SampleViewport"]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 1, 0, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 3 )

[node name="Camera" type="Camera" parent="SampleViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 1 )
environment = SubResource( 1 )
projection = 1

[node name="ExpandIslandViewPort" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="ExpandIslandViewPort"]
material = SubResource( 5 )
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 8 )
flip_v = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 512.0
margin_top = 512.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_rotation = 180.0
texture = SubResource( 7 )
flip_h = true
flip_v = true

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -271.0
margin_bottom = 48.0
text = "Help:
The mesh has to be set in SampleMesh.
It has to have a size at max of 1x1x1 Units.
The origin has to be in the corner."
